Test infra for LLM analysis - WIP. The LMM Gateway for now is a mock until I spin up a real LLM and complete this.